# RAG_with_YandexGPT

./: .dockerignore  .gitignore  60189970.txt  Dockerfile  README.md  YaLLM.py  database.py  env_example  evaluation.py  forbidden_keywords.txt  main.ipynb  main.py  preprocessing.py  prompt_template.txt  prompts.py  pyproject.toml  requirements.txt
data/: 60189970.txt
src/resources/: green_questions.py  red_questions.py
src/scripts/: database.py  prompts.py
